Connection avce la machine virtuelle

--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - spacy
   - notebook
   - nltk
+  - seaborn
   - pip:
     # convert "pip3 install --pre torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/nightly/cpu" to environment.yml  
     - torch
