--- a/Mon Code/environment.yml
+++ b/Mon Code/environment.yml
@@ -10,6 +10,8 @@ dependencies:
   - spacy
   - notebook
   - nltk
+  - matplotlib
+  - seaborn
   - pip:
     # convert "pip3 install --pre torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/nightly/cpu" to environment.yml  
     - torch --pre --extra-index-url https://download.pytorch.org/whl/nightly/cpu
@@ -17,3 +19,8 @@ dependencies:
     - torchaudio --pre --extra-index-url https://download.pytorch.org/whl/nightly/cpu
     - bertopic[flair, gensim, spacy, use]
     - openai
+    - hf_xet
+    - sentence-transformers
+    - umap-learn
+    - hdbscan
+    - networkx
